--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   adaptive_components: ^0.0.3
   material_color_utilities: ^0.1.4
   dynamic_color: ^1.2.2
+  go_router: ^3.1.0
+  adaptive_navigation: ^0.0.5
 
 dev_dependencies:
   flutter_test:
